--- a/src/osl-update.tex
+++ b/src/osl-update.tex
@@ -33,7 +33,7 @@ As an alternative, this research would allow end developers to specify a relatio
 
 This research began with the support of Orbis Labs and continues with the support of Casper Association. Prior art in this line of research \cite{sigma11,osl-paper,sigma11-poly-bounds} defined a version of predicate logic which is strong enough to express NP relations which are practical to arithmetize, and also some methods for arithmetizing formulas in that language on top of PLONKish arithmetization using Halo 2. \cite{halo2-book,halo2-github} The language in question is called OSL, which originally stood for Orbis Specification Language and now stands for Open Specification Language (a backronym). Implementation efforts \cite{osl-github} are ongoing and open source. As of this writing, these efforts are closely approaching a point where generating zero knowledge proofs will be possible. The current paper provides an update on the research and development efforts, which have come up with more practical methods of arithmetization than what are described in the prior literature.
 
-OSL is a layer of abstraction over $\Sigma^1_1$ formulas. $\Sigma^1_1$ formulas are a sublanguage of second order arithmetic \cite{simpson} extended with $\text{ind}_<$ and max built-in functions, defined as follows:
+OSL is a layer of abstraction over $\Sigma^1_1$ formulas. $\Sigma^1_1$ formulas are a sublanguage of bounded second order arithmetic \cite{buss} extended with $\text{ind}_<$ and max built-in functions, defined as follows:
 
 \begin{equation}
 	\text{ind}_<(x, y) = \begin{cases}
@@ -81,9 +81,9 @@ Overall, the OSL compiler in its current form has the following stages, from fir
 	\item The de Bruijn indices in the $\Sigma^1_1$ formula get replaced with gensyms, which are globally unique generated names. Formulas using de Bruijn indices are relatively easy to generate, because unintended variable capture is not much of a concern; there is no need to carry state to remember which variable names have been used during the generation process. On the other hand, formulas using gensyms are relatively easy to manipulate. That is why this stage is useful.
 	\item The $\Sigma^1_1$ formula gets converted into a prenex normal form, which brings all quantifiers to the front of the formula.
 	\item The prenex normal form gets converted into a strong prenex normal form, which brings all instance quantifiers to the front of the formula, followed by all existential quantifiers, followed by all universal quantifiers.
-	\item The strong prenex normal form gets compiled into a logic circuit. A logic circuit is a structure similar to a Halo 2 \cite{halo2-book,halo2-github} circuit, with some key differences, as follows. Logic circuits do not have lookup arguments, but instead just gate constraints and equality constraints. Instead of taking the form $p = 0$, for $p$ a polynomial, gate constraints are quantifier-free logic formulas which can assert equalities and inequalities over terms involving variables, constants, addition, multiplication, the max and $\text{ind}_<$ functions, and lookups.
+	\item The strong prenex normal form gets compiled into a logic circuit. A logic circuit is a structure similar to a Halo 2 \cite{halo2-book,halo2-github} circuit, with some key differences, as follows. Logic circuits do not have top-level lookup arguments, but instead just gate constraints and equality constraints. Instead of taking the form $p = 0$, for $p$ a polynomial, gate constraints are quantifier-free logic formulas which can assert equalities and inequalities over terms involving variables, constants, addition, multiplication, the max and $\text{ind}_<$ functions, and lookups.
 
-		Variables in this context are the same as they are in Halo 2 gate constraints: they are of the form $x_{i,j}$, where $i$ is an absolute column index and $j$ is a relative row index (an offset from the current row). Lookups in this context are of the form $c_{n+1}((t_1, c_1), ..., (t_n, c_n))$ where each $t_i$ is a term and each $c_i$ is a column ($i$ being an absolute column index). The output of a lookup term at a row $r$ is the value of column $c_{n+1}$ in the unique row $r'$ such that the vector of column values $(c_1, ..., c_n)$ at row $r'$ is equal to the vector of term values $(t_1, ..., t_n)$ at row $r$. Lookups are effectively the ``missing link'' between function calls and lookup arguments, having some characteritics of both function calls and lookup arguments, being the result of compiling function calls and being compiled into lookup arguments in Halo 2 circuits.
+		Variables in this context are the same as they are in Halo 2 gate constraints: they are of the form $x_{i,j}$, where $i$ is an absolute column index and $j$ is a relative row index (an offset from the current row). Lookups in this context are of the form $c_{n+1}((t_1, c_1), ..., (t_n, c_n))$ where each $t_i$ is a term and each $c_i$ is a column ($i$ being an absolute column index). The output of a lookup term at a row $r$ is the value of column $c_{n+1}$ in the unique row $r'$ such that the vector of column values $(c_1, ..., c_n)$ at row $r'$ is equal to the vector of term values $(t_1, ..., t_n)$ at row $r$. Lookups are effectively the ``missing link'' between function calls and lookup arguments, having some characteristics of both function calls and lookup arguments, being the result of compiling function calls and being compiled into lookup arguments in Halo 2 circuits.
 
 		This notion of logic circuits is similar to the notion of logic circuits found in \cite{sigma11-poly-bounds}, with the difference being that terms related by equalities and inequalities are as just described instead of being plain polynomials as in \cite{sigma11-poly-bounds}.
 
@@ -2029,7 +2029,7 @@ if $\delta_{M[f_1 \mapsto g]}(\phi)$ is defined for each $g$.
 
 	\bibitem{halo2-github} The Electric Coin Company. \textit{halo2.} 2022. \url{https://github.com/zcash/halo2}
 
-	\bibitem{simpson} Stephen G. Simpson. \textit{Subsystems of Second Order Arithmetic.} Cambridge University Press, 2009. ISBN 1139478915, 9781139478915.
+	\bibitem{buss} Samuel Buss. \textit{Bounded Arithmetic.} 1985. Doctoral dissertation, Princeton University. \url{https://mathweb.ucsd.edu/~sbuss/ResearchWeb/BAthesis/Buss\_Thesis\_OCR.pdf}
 
 	\bibitem{sequent-calculus} Edward Z. Yang. \textit{Logitext Tutorial.} Accessed May 2022. \url{http://logitext.mit.edu/logitext.fcgi/tutorial}
 
